# recommendation_system_api

./: .env.example  Dockerfile  README.md  app.py  config.py  connection_hander.py  pyproject.toml  requirements.txt  trained_product_embeddings.npy  users.py
.github/workflows/: main_hl-model.yml  main_hl-recommend-api.yml
api/: views.py
api/controllers/: product_embedding.py  products.py  ratings.py
api/dbs/: connection_hander.py  redis.py
api/resources/: recommend.py  recommendbyproduct.py  training.py  user.py
models/: base.py  factorized.py  loader.py
