[tool.poetry]
name = "recommendation-system-api"
version = "0.1.0"
description = ""
authors = ["Thiennn262626 <nguyendinhthien10a5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
Flask = "^3.0.2"
sqlalchemy = "^2.0.29"
flask-restful = "^0.3.10"
pandas = "^2.2.1"
pyodbc = "^5.1.0"
torch = "^2.2.2"
tqdm = "^4.66.2"
pymongo = "^4.6.3"
scikit-learn = "^1.4.1.post1"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
